--- a/appview/pages/templates/user/following.html
+++ b/appview/pages/templates/user/following.html
@@ -10,7 +10,14 @@
   <p class="text-sm font-bold p-2 dark:text-white">ALL FOLLOWING</p>
   <div id="following" class="grid grid-cols-1 gap-4 mb-6">
     {{ range .Following }}
-       {{ template "user/fragments/followCard" . }}
+       {{ template "user/fragments/followCard"
+          (dict
+              "LoggedInUser" $.LoggedInUser
+              "UserDid" .UserDid
+              "Profile" .Profile
+              "FollowStatus" .FollowStatus
+              "FollowersCount" .FollowersCount
+              "FollowingCount" .FollowingCount) }}
     {{ else }}
         <p class="px-6 dark:text-white">This user does not follow anyone yet.</p>
     {{ end }}
