--- a/appview/pages/templates/user/fragments/repoCard.html
+++ b/appview/pages/templates/user/fragments/repoCard.html
@@ -14,23 +14,23 @@
   {{ with $repo }}
     <div class="py-4 px-6 gap-1 flex flex-col drop-shadow-sm rounded bg-white dark:bg-gray-800 min-h-32">
       <div class="font-medium dark:text-white flex items-center justify-between">
-        <div class="flex items-center">
-        {{ if .Source }}
-          {{ i "git-fork" "w-4 h-4 mr-1.5 shrink-0" }}
-        {{ else }}
-          {{ i "book-marked" "w-4 h-4 mr-1.5 shrink-0" }}
-        {{ end }}
-
+        <div class="flex items-center min-w-0 flex-1 mr-2">
+          {{ if .Source }}
+            {{ i "git-fork" "w-4 h-4 mr-1.5 shrink-0" }}
+          {{ else }}
+            {{ i "book-marked" "w-4 h-4 mr-1.5 shrink-0" }}
+          {{ end }}
           {{ $repoOwner := resolve .Did }}
           {{- if $fullName -}}
-            <a href="/{{ $repoOwner }}/{{ .Name }}" class="truncate">{{ $repoOwner }}/{{ .Name }}</a>
+            <a href="/{{ $repoOwner }}/{{ .Name }}" class="truncate min-w-0">{{ $repoOwner }}/{{ .Name }}</a>
           {{- else -}}
-            <a href="/{{ $repoOwner }}/{{ .Name }}" class="truncate">{{ .Name }}</a>
+            <a href="/{{ $repoOwner }}/{{ .Name }}" class="truncate min-w-0">{{ .Name }}</a>
           {{- end -}}
         </div>
-        
         {{ if and $starButton $root.LoggedInUser }}
+        <div class="shrink-0">
           {{ template "repo/fragments/repoStar" $starData }}
+        </div>
         {{ end }}
       </div>
       {{ with .Description }}
