--- a/appview/pages/templates/notifications/fragments/bell.html
+++ b/appview/pages/templates/notifications/fragments/bell.html
@@ -3,7 +3,7 @@
      hx-get="/notifications/count"
      hx-target="#notification-count"
      hx-trigger="load, every 30s">
-  <a href="/notifications" class="text-gray-500 dark:text-gray-400 flex gap-1 items-center group ml-4 mr-2">
+  <a href="/notifications" class="text-gray-500 dark:text-gray-400 flex gap-1 items-end group">
     {{ i "bell" "w-5 h-5" }}
     <span id="notification-count"></span>
   </a>
