--- a/appview/pages/templates/user/fragments/picHandleLink.html
+++ b/appview/pages/templates/user/fragments/picHandleLink.html
@@ -1,6 +1,5 @@
 {{ define "user/fragments/picHandleLink" }}
-{{ $resolved := resolve . }}
-<a href="/{{ $resolved }}" class="flex items-center gap-1">
-    {{ template "user/fragments/picHandle" $resolved }}
+<a href="/{{ resolve . }}" class="flex items-center gap-1">
+    {{ template "user/fragments/picHandle" . }}
 </a>
 {{ end }}
