appview/pages: overhaul new repo page
Signed-off-by: Anirudh Oppiliappan <anirudh@tangled.org>

--- a/appview/pages/templates/strings/put.html
+++ b/appview/pages/templates/strings/put.html
@@ -3,8 +3,8 @@
 {{ define "content" }}
   <div class="px-6 py-2 mb-4">
     {{ if eq .Action "new" }}
-      <p class="text-xl font-bold dark:text-white">Create a new string</p>
-      <p class="">Store and share code snippets with ease.</p>
+      <p class="text-xl font-bold dark:text-white mb-1">Create a new string</p>
+      <p class="text-gray-600 dark:text-gray-400 mb-1">Store and share code snippets with ease.</p>
     {{ else }}
       <p class="text-xl font-bold dark:text-white">Edit string</p>
     {{ end }}
