appview,knotserver: pass along a readme candidate in repo.tree responses
this simplifies readme detection and improves page performance.

Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/repo/tree.html
+++ b/appview/pages/templates/repo/tree.html
@@ -88,3 +88,9 @@
   </div>
 </main>
 {{end}}
+
+{{ define "repoAfter" }}
+    {{- if or .HTMLReadme .Readme -}}
+       {{ template "repo/fragments/readme" . }}
+    {{- end -}}
+{{ end }}
