--- a/appview/pages/templates/user/fragments/followCard.html
+++ b/appview/pages/templates/user/fragments/followCard.html
@@ -1,6 +1,6 @@
 {{ define "user/fragments/followCard" }}
 {{ $userIdent := resolve .UserDid }}
-<div class="flex flex-col divide-y divide-gray-200 dark:divide-gray-700 border border-gray-200 dark:border-gray-700 rounded-sm">
+<div class="flex flex-col divide-y divide-gray-200 dark:divide-gray-700 rounded-sm">
   <div class="py-4 px-6 drop-shadow-sm rounded bg-white dark:bg-gray-800 flex items-center gap-4">
     <div class="flex-shrink-0 max-h-full w-24 h-24">
       <img class="object-cover rounded-full p-2" src="{{ fullAvatar $userIdent }}" />
