--- a/appview/pages/templates/repo/fragments/labelPanel.html
+++ b/appview/pages/templates/repo/fragments/labelPanel.html
@@ -1,5 +1,5 @@
 {{ define "repo/fragments/labelPanel" }}
-  <div id="label-panel" class="flex flex-col gap-6">
+  <div id="label-panel" class="flex flex-col gap-6 px-6 md:px-0">
     {{ template "basicLabels" . }}
     {{ template "kvLabels" . }}
   </div>
