--- a/appview/pages/templates/repo/issues/issue.html
+++ b/appview/pages/templates/repo/issues/issue.html
@@ -22,7 +22,7 @@
               "Defs" $.LabelDefs
               "Subject" $.Issue.AtUri
               "State" $.Issue.Labels) }}
-      {{ template "issueParticipants" . }}
+      {{ template "repo/fragments/participants" $.Issue.Participants }}
     </div>
   </div>
 {{ end }}
@@ -122,32 +122,6 @@
   </div>
 {{ end }}
 
-{{ define "issueParticipants" }}
-  {{ $all := .Issue.Participants }}
-  {{ $ps := take $all 5 }}
-  <div>
-    <div class="py-1 flex items-center text-sm">
-      <span class="font-bold text-gray-500 dark:text-gray-400 capitalize">Participants</span>
-      <span class="bg-gray-200 dark:bg-gray-700 rounded py-1/2 px-1 ml-1">{{ len $all }}</span>
-    </div>
-    <div class="flex items-center -space-x-3 mt-2">
-      {{ $c := "z-50 z-40 z-30 z-20 z-10" }}
-      {{ range $i, $p := $ps }}
-        <img
-            src="{{ tinyAvatar . }}"
-            alt=""
-            class="rounded-full h-8 w-8 mr-1 border-2 border-gray-100 dark:border-gray-900 z-{{sub 5 $i}}0"
-        />
-      {{ end }}
-
-      {{ if gt (len $all) 5 }}
-        <span class="pl-4 text-gray-500 dark:text-gray-400 text-sm">
-          +{{ sub (len $all) 5 }}
-        </span>
-      {{ end }}
-    </div>
-  </div>
-{{ end }}
 
 {{ define "repoAfter" }}
   <div class="flex flex-col gap-4 mt-4">
