appview/signup: set up cf turnstile
Sets up Cloudflare Turnstile for fairly non-intrusive captcha. The
client token is verified with CF when the user hits 'join now' (POST
/signup), so this should prevent bot signups.

Signed-off-by: Anirudh Oppiliappan <anirudh@tangled.org>

--- a/appview/pages/templates/user/login.html
+++ b/appview/pages/templates/user/login.html
@@ -36,7 +36,7 @@
                             placeholder="akshay.tngl.sh"
                         />
                         <span class="text-sm text-gray-500 mt-1">
-                            Use your <a href="https://atproto.com">ATProto</a>
+                            Use your <a href="https://atproto.com">AT Protocol</a>
                             handle to log in. If you're unsure, this is likely
                             your Tangled (<code>.tngl.sh</code>) or <a href="https://bsky.app">Bluesky</a> (<code>.bsky.social</code>) account.
                         </span>
