--- a/appview/pages/templates/repo/fork.html
+++ b/appview/pages/templates/repo/fork.html
@@ -6,6 +6,13 @@
 </div>
 <div class="p-6 bg-white dark:bg-gray-800 drop-shadow-sm rounded">
   <form hx-post="/{{ .RepoInfo.FullName }}/fork" class="space-y-12" hx-swap="none" hx-indicator="#spinner">
+
+    <fieldset class="space-y-3">
+      <legend for="repo_name" class="dark:text-white">Repository name</legend>
+      <input type="text" id="repo_name" name="repo_name" value="{{ .RepoInfo.Name }}"
+        class="w-full p-2 border rounded bg-gray-100 dark:bg-gray-700 dark:text-white dark:border-gray-600" />
+    </fieldset>
+
     <fieldset class="space-y-3">
       <legend class="dark:text-white">Select a knot to fork into</legend>
       <div class="space-y-2">
