appview/pages: center captcha in signup page
Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/user/signup.html
+++ b/appview/pages/templates/user/signup.html
@@ -41,8 +41,8 @@
                     invite code, desired username, and password in the next
                     page to complete your registration.
                     </span>
-                    <div class="w-full mt-4">
-                    <div class="cf-turnstile" data-sitekey="{{ .CloudflareSiteKey }}"></div>
+                    <div class="w-full mt-4 text-center">
+                      <div class="cf-turnstile" data-sitekey="{{ .CloudflareSiteKey }}"></div>
                     </div>
                     <button class="btn text-base w-full my-2 mt-6" type="submit" id="signup-button" tabindex="7" >
                       <span>join now</span>
