appview/state,appview/pages/templates: add installable pwa support for tangled
Signed-off-by: afterlifepro <vielle.dev@proton.me>

--- a/appview/pages/templates/user/completeSignup.html
+++ b/appview/pages/templates/user/completeSignup.html
@@ -20,6 +20,7 @@
                 content="complete your signup for tangled"
             />
             <script src="/static/htmx.min.js"></script>
+            <link rel="manifest" href="/pwa-manifest.json" />
             <link
                 rel="stylesheet"
                 href="/static/tw.css?{{ cssContentHash }}"
