--- a/appview/pages/templates/user/signup.html
+++ b/appview/pages/templates/user/signup.html
@@ -8,6 +8,7 @@
             <meta property="og:url" content="https://tangled.org/signup" />
             <meta property="og:description" content="sign up for tangled" />
             <script src="/static/htmx.min.js"></script>
+            <link rel="manifest" href="/pwa-manifest.json" />
             <link rel="stylesheet" href="/static/tw.css?{{ cssContentHash }}" type="text/css" />
             <title>sign up &middot; tangled</title>
 
