--- a/appview/pages/templates/layouts/base.html
+++ b/appview/pages/templates/layouts/base.html
@@ -14,6 +14,9 @@
             <link rel="preconnect" href="https://avatar.tangled.sh" />
             <link rel="preconnect" href="https://camo.tangled.sh" />
 
+            <!-- pwa manifest -->
+            <link rel="manifest" href="/pwa-manifest.json" />
+
             <!-- preload main font -->
             <link rel="preload" href="/static/fonts/InterVariable.woff2" as="font" type="font/woff2" crossorigin />
 
