--- a/appview/pages/templates/user/login.html
+++ b/appview/pages/templates/user/login.html
@@ -8,6 +8,7 @@
             <meta property="og:url" content="https://tangled.org/login" />
             <meta property="og:description" content="login to for tangled" />
             <script src="/static/htmx.min.js"></script>
+            <link rel="manifest" href="/pwa-manifest.json" />
             <link rel="stylesheet" href="/static/tw.css?{{ cssContentHash }}" type="text/css" />
             <title>login &middot; tangled</title>
         </head>
