appview/pages: Update .sh to .org in ssh clone dropdown
Signed-off-by: Vidya Sagar VOBBILISETTI <mail@vidyasagarv.com>

--- a/appview/pages/templates/repo/fragments/cloneDropdown.html
+++ b/appview/pages/templates/repo/fragments/cloneDropdown.html
@@ -1,7 +1,7 @@
 {{ define "repo/fragments/cloneDropdown" }}
     {{ $knot := .RepoInfo.Knot }}
     {{ if eq $knot "knot1.tangled.sh" }}
-        {{ $knot = "tangled.sh" }}
+        {{ $knot = "tangled.org" }}
     {{ end }}
 
     <details id="clone-dropdown" class="relative inline-block text-left group">
