appview/pages: header and footer occupy full page width
Signed-off-by: Jens Rømer Hesselbjerg <jh.roemer@gmail.com>

--- a/appview/pages/templates/layouts/fragments/footer.html
+++ b/appview/pages/templates/layouts/fragments/footer.html
@@ -1,6 +1,6 @@
 {{ define "layouts/fragments/footer" }}
-<div class="w-full p-4 md:p-8 bg-white dark:bg-gray-800 rounded-t drop-shadow-sm">
-  <div class="container mx-auto max-w-7xl px-4">
+<div class="w-full p-8">
+  <div class="max-w-screen-lg mx-auto px-4">
     <div class="flex flex-col lg:flex-row justify-between items-start text-gray-600 dark:text-gray-400 text-sm gap-8">
       <div class="mb-4 md:mb-0">
         <a href="/" hx-boost="true" class="flex gap-2 font-semibold italic no-underline hover:no-underline">
