--- a/appview/pages/templates/layouts/base.html
+++ b/appview/pages/templates/layouts/base.html
@@ -24,10 +24,9 @@
             <title>{{ block "title" . }}{{ end }} · tangled</title>
             {{ block "extrameta" . }}{{ end }}
         </head>
-        <body class="min-h-screen grid grid-cols-1 grid-rows-[min-content_auto_min-content] gap-4 bg-slate-100 dark:bg-gray-900 dark:text-white transition-colors duration-200"
-          style="grid-template-columns: minmax(1rem, 1fr) minmax(auto, 1024px) minmax(1rem, 1fr);">
+        <body class="min-h-screen flex flex-col gap-4 bg-slate-100 dark:bg-gray-900 dark:text-white transition-colors duration-200">
           {{ block "topbarLayout" . }}
-            <header class="px-1 col-span-full md:col-span-1 md:col-start-2" style="z-index: 20;">
+            <header class="w-full bg-white dark:bg-gray-800 col-span-full md:col-span-1 md:col-start-2" style="z-index: 20;">
 
                {{ if .LoggedInUser }}
                 <div id="upgrade-banner"
@@ -41,23 +40,25 @@
           {{ end }}
 
           {{ block "mainLayout" . }}
-            <div class="px-1 col-span-full  md:col-span-1 md:col-start-2 flex flex-col gap-4">
-              {{ block "contentLayout" . }}
-                <main class="col-span-1 md:col-span-8">
+            <div class="flex-grow">
+              <div class="max-w-screen-lg px-4 mx-auto my-6 flex flex-col gap-4">
+                {{ block "contentLayout" . }}
+                <main>
                   {{ block "content" . }}{{ end }}
                 </main>
-              {{ end }}
-  
-              {{ block "contentAfterLayout" . }}
-                <main class="col-span-1 md:col-span-8">
+                {{ end }}
+                
+                {{ block "contentAfterLayout" . }}
+                <main>
                   {{ block "contentAfter" . }}{{ end }}
                 </main>
-              {{ end }}
+                {{ end }}
+              </div>
             </div>
           {{ end }}
 
           {{ block "footerLayout" . }}
-            <footer class="px-1 col-span-full md:col-span-1 md:col-start-2 mt-12">
+            <footer class="bg-white dark:bg-gray-800 mt-12">
               {{ template "layouts/fragments/footer" . }}
             </footer>
           {{ end }}
