appview/pages: initial gfi banner
Signed-off-by: Anirudh Oppiliappan <anirudh@tangled.org>

--- a/appview/pages/templates/timeline/home.html
+++ b/appview/pages/templates/timeline/home.html
@@ -12,6 +12,7 @@
   <div class="flex flex-col gap-4">
     {{ template "timeline/fragments/hero" . }}
     {{ template "features" . }}
+    {{ template "timeline/fragments/goodfirstissues" . }}
     {{ template "timeline/fragments/trending" . }}
     {{ template "timeline/fragments/timeline" . }}
     <div class="flex justify-end">
