--- a/appview/pages/templates/timeline/timeline.html
+++ b/appview/pages/templates/timeline/timeline.html
@@ -13,6 +13,7 @@
        {{ template "timeline/fragments/hero" . }}
      {{ end }}
 
+    {{ template "timeline/fragments/goodfirstissues" . }}
     {{ template "timeline/fragments/trending" . }}
     {{ template "timeline/fragments/timeline" . }}
 {{ end }}
