appview/gfi: slightly saner copy text
Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/timeline/fragments/goodfirstissues.html
+++ b/appview/pages/templates/timeline/fragments/goodfirstissues.html
@@ -6,11 +6,8 @@
           <div class="text-purple-500 dark:text-purple-400">Oct 2025</div>
           <p>
             Make your first contribution to an open-source project this October.
-          </p>
-          <p>
-            <em>good-first-issue</em> is a collection of issues on open-source projects
-            that are easy ways for new contributors to give back to the projects
-            they love.
+            <em>good-first-issue</em> helps new contributors find easy ways to
+            start contributing to open-source projects.
           </p>
           <span class="flex items-center gap-2 text-purple-500 dark:text-purple-400">
             Browse issues {{ i "arrow-right" "size-4" }}
